layout issues

--- a/ui/src/assets/chessground/theme.css
+++ b/ui/src/assets/chessground/theme.css
@@ -13,7 +13,6 @@
     background-size: cover;
 
     box-shadow: 2px 2px 4px #7b5330;
-    border-radius: 0.5em;
     overflow: hidden;
 }
 
